added missing div close element

--- a/order.html
+++ b/order.html
@@ -23,5 +23,6 @@
             </div> 
             <button type="submit" class="button" onclick="placeOrder()"><a href="index.html">Place Order</a> </button>
             <a href="menu.html">back to menu</a>
+        </div>
 </body>
 </html>
