solved images side-by-side on mobile view

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
     </nav>
-    <main>
+    <main class="parent">
         <div class="text">
             <img src="images/hero-text-300x215-1.png" alt="">
             <p class="max-width-60">Crispy, golden, thin-crust pizza served in Boston and California.</p>
@@ -40,19 +40,19 @@
             </div>
         </div>
         <div>
-            <img src="images/UC-block-website-Pepperoni-a.jpg" alt="" class="img">
+            <img src="images/UC-block-website-Pepperoni-a.jpg" alt="" class="img child2">
         </div>
         <div>
-            <img src="images/UC-siteimages-Brookline.jpg" alt="" class="img ">
+            <img src="images/UC-siteimages-Brookline.jpg" alt="" class="img">
         </div>
-        <div class="text">
+        <div class="text child4">
             <p class="max-font max-width-60">GRAB A SLICE</p>
             <p class="max-width-80">We make our dough and sauce from scratch daily and only use the best ingredients</p>
             <div>
                 <a href="menu.html" class="button2">Order Now</a> 
             </div>
         </div>
-        <div class="text">
+        <div>
             <p class="min-font ">WE'RE HIRING</p>
             <p class="max-font max-width-80">JOIN THE UPPER CRUST TEAM</p>
             <p class="max-width-80">If you're looking to work for a company with plenty of opportunity and a great team to work beside, Upper Crust is the place for you! Apply here and learn more about everything we have to offer</p>
@@ -64,7 +64,7 @@
         <div>
             <img src="images/uc-section-2.jpg" alt="" class="img">
         </div>
-        <div class="text">
+        <div class="text child6">
             <p class="min-font">FOLLOW US</p>
             <p class="max-font max-width-60">WE ARE SORT OF FAMOUS</p>
             <p>That's what we are up to.</p>
