fixed text overlaping on hiring section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <a href="menu.html" class="button2">Order Now</a> 
             </div>
         </div>
-        <div>
-            <p class="min-font ">WE'RE HIRING</p>
+        <div class="text">
+            <p class="min-font">WE'RE HIRING</p>
             <p class="max-font max-width-80">JOIN THE UPPER CRUST TEAM</p>
             <p class="max-width-80">If you're looking to work for a company with plenty of opportunity and a great team to work beside, Upper Crust is the place for you! Apply here and learn more about everything we have to offer</p>
             <div><a href="contact.html" class="button2">Apply Now</a></div>
