added animation to toggle button

--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <nav class="nav">
         <div>
             <p class="navtitle">THE UPPER CRUST</p>
-            <button class="toggle-button" onclick="menu()">
+            <button class="toggle-button" id="bar" onclick="menu()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
