--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav">
     <div>
         <p class="navtitle">THE UPPER CRUST</p>
-        <button class="toggle-button" id="bar" onclick="menu()">
+        <button class="toggle-button" onclick="menu()">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
