--- a/menu.html
+++ b/menu.html
@@ -20,9 +20,9 @@
         </div>
             <div>
                 <ul class="list" id="flex">
-                    <li class="border-bottom"><a href="index.html">home</a></li>
-                    <li class="border-bottom active"><a href="#">Our menu</a></li>                
-                    <li class="border-bottom"><a href="catring.html">Catering</a></li>                                               
+                <button class="border-bottom " onclick="location.href='.#'">home</button>                
+                <button class="border-bottom active" onclick="location.href='menu.html'">Our menu</button>                
+                <button class="border-bottom " onclick="location.href='catring.html'">Locations</button>                                                              
                 </ul>
             </div>
         </nav>
@@ -214,7 +214,7 @@
                 <div>
                     <ul>
                         <li><a href="#">OUR MENU</a></li>
-                        <li><a href="catring.html">CATRING</a></li>
+                        <li><a href="catring.html">LOCATIONS</a></li>
                         <li><a href="contact.html">CAREERS</a></li>
                     </ul>
                 </div>
