reverted to previous version

--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
     <link rel="icon" href="icons/icons8-pizza-48.png">
     <title>The upper curst pizza</title>
     <link rel="stylesheet" href="index.css">
-    <script defer src="index.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <nav class="nav">
+    <div>
+        <p class="navtitle">THE UPPER CRUST</p>
+        <button class="toggle-button" id="bar" onclick="menu()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
+    </div>
+        <div>
+            <ul class="list" id="flex">
+                <button class="border-bottom active" onclick="location.href='#'">home</button>                
+                <button class="border-bottom " onclick="location.href='menu.html'">Our menu</button>                
+                <button class="border-bottom " onclick="location.href='catring.html'">locations</button>                
+                <button class="button" onclick="location.href='menu.html'">Order Now</button>                
+            </ul>
+        </div>
     </nav>
     <main class="parent">
         <div class="text">
@@ -61,6 +77,28 @@
         </div>
     </main>
     <footer class="footer">
+            <div>
+               <img src="images/Logo.png" alt=""> 
+            </div>
+                <div>
+                    <ul>
+                        <li><a href="menu.html">OUR MENU</a></li>
+                        <li><a href="catring.html">LOCATIONS</a></li>
+                        <li><a href="contact.html">CAREERS</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/sammit-badodekar-124663241" target="_blank">LINKEDIN</a></li>
+                        <li><a href="https://www.facebook.com/sammit.badodekar.399?mibextid=ZbWKwL" target="_blank">FACEBOOK</a></li>
+                        <li><a href="https://twitter.com/SammitBadodekar?t=BhN3et2iD1uLnq8ILmNz_w&s=09" target="_blank">TWITTER</a></li>
+                        <li><a href="https://www.instagram.com/sammitbadodekar" target="_blank">INSTAGRAM</a></li>
+                    </ul>
+                </div>
+        <div>
+            <p>hello@theuppercrust.pizza</p>
+            <p>Copyright © The Upper Crust 2023 All Rights Reserved</p>
+        </div>
     </footer>
 </body>
 </html>
