--- a/catring.html
+++ b/catring.html
@@ -11,7 +11,23 @@
 </head>
 <body>
     <nav class="nav">
-    </nav>
+        <div>
+            <p class="navtitle">THE UPPER CRUST</p>
+            <button class="toggle-button" id="bar" onclick="menu()">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+        </div>
+            <div>
+                <ul class="list" id="flex">
+                    <button class="border-bottom" onclick="location.href='index.html'">home</button>                
+                    <button class="border-bottom " onclick="location.href='menu.html'">Our menu</button>                
+                    <button class="border-bottom active" onclick="location.href='catring.html'">Locations</button>                
+                    <button class="button" onclick="location.href='menu.html'">Order Now</button>                
+                </ul>
+            </div>
+        </nav>
         <main>
             <div><img src="images/locations-header-1.png" alt=""></div>
             <div class="vertical-nav">
@@ -86,6 +102,28 @@
             </div>
         </main>
         <footer class="footer">
-        </footer>
+            <div>
+               <img src="images/Logo.png" alt=""> 
+            </div>
+                <div>
+                    <ul>
+                        <li><a href="menu.html">OUR MENU</a></li>
+                        <li><a href="catring.html">LOCATIONS</a></li>
+                        <li><a href="contact.html">CAREERS</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/sammit-badodekar-124663241" target="_blank">LINKEDIN</a></li>
+                        <li><a href="https://www.facebook.com/sammit.badodekar.399?mibextid=ZbWKwL" target="_blank">FACEBOOK</a></li>
+                        <li><a href="https://twitter.com/SammitBadodekar?t=BhN3et2iD1uLnq8ILmNz_w&s=09" target="_blank">TWITTER</a></li>
+                        <li><a href="https://www.instagram.com/sammitbadodekar" target="_blank">INSTAGRAM</a></li>
+                    </ul>
+                </div>
+        <div>
+            <p>hello@theuppercrust.pizza</p>
+            <p>Copyright © The Upper Crust 2023 All Rights Reserved</p>
+        </div>
+    </footer>
     </body>
 </html>
