added scrolling horizontal text

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <div>
             <img src="images/UC-block-website-Pepperoni-a.jpg" alt="" class="img child2">
         </div>
+        <div class="animation">
+            <p>🔥🔥30% off on all our pizzas🔥🔥</p>
+        </div>
         <div>
             <img src="images/UC-siteimages-Brookline.jpg" alt="" class="img">
         </div>
