improved place order page

--- a/menu.html
+++ b/menu.html
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <p>Total Amount:<span id="amount">₹495</span></p>
-                <button class="button"><a href="order.html">Place Order</a></button>
+                <button class="button" onclick="location.href='order.html'">Place Order</a></button>
                 <button class="button4">Back To Menu</button>
             </div>
     <footer class="footer">
