--- a/order.html
+++ b/order.html
@@ -6,23 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icons/icons8-pizza-48.png">
     <link rel="stylesheet" href="order.css">
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
     <title>complete order</title>
 </head>
 <body>
-    <div class="placeorder">
         <P class="card-heading">THE UPPER CRUST</P>
-        <div><label for="name">Name:</label>
-             <input type="text" id="name" placeholder="john cena" required>
-            </div>
-             <div><label for="phno.">phone:</label>
-             <input type="text" id="phno" placeholder="111 111 1111"required>
-            </div>
-            <div> <label for="add">Address:</label>
-            <input type="text" id="add" placeholder="address" required>
-            </div> 
-            <button type="submit" class="button" onclick="placeOrder()"><a href="index.html">Place Order</a> </button>
+        <form action="" class="placeorder" id="placeorder">
+            <input type="text" id="name" placeholder="name" pattern="[A-Za-z]{5,}" required>
+            <input type="number" id="phno" placeholder="mobile no."required>
+            <textarea name="" id="add" cols="20" rows="5" placeholder="address" pattern="[A-Za-z]{10,}" required></textarea>
+            <button type="submit" class="button" onclick="placeOrder()">Place Order</a> </button>
             <a href="menu.html">back to menu</a>
+        </form>
+        <div class="hidden" id="hidden">
+            <img src="images/9fcb7c29-43ca-276c-3b0e-97c1bcc9f3d2.png" alt="">
+            <h1>YOUR ORDER IS ON THE WAY!!</h1>
         </div>
 </body>
 </html>
