fixed redirecting issue on order page

--- a/order.html
+++ b/order.html
@@ -11,14 +11,14 @@
 </head>
 <body>
         <P class="card-heading">THE UPPER CRUST</P>
-        <form action="" class="placeorder" id="placeorder">
+        <form action="" class="placeorder">
             <input type="text" id="name" placeholder="name" pattern="[A-Za-z]{5,}" required>
             <input type="number" id="phno" placeholder="mobile no."required>
             <textarea name="" id="add" cols="20" rows="5" placeholder="address" pattern="[A-Za-z]{10,}" required></textarea>
             <button type="submit" class="button" onclick="placeOrder()">Place Order</a> </button>
             <a href="menu.html">back to menu</a>
         </form>
-        <div class="hidden" id="hidden">
+        <div class="hidden">
             <img src="images/9fcb7c29-43ca-276c-3b0e-97c1bcc9f3d2.png" alt="">
             <h1>YOUR ORDER IS ON THE WAY!!</h1>
         </div>
