fixed minimum characters issue

--- a/order.html
+++ b/order.html
@@ -12,9 +12,9 @@
 <body>
         <P class="card-heading">THE UPPER CRUST</P>
         <form action="" class="placeorder">
-            <input type="text" id="name" placeholder="name" pattern="[A-Za-z]{5,}" required>
+            <input type="text" id="name" placeholder="name" required>
             <input type="number" id="phno" placeholder="mobile no."required>
-            <textarea name="" id="add" cols="20" rows="5" placeholder="address" pattern="[A-Za-z]{10,}" required></textarea>
+            <textarea name="" id="add" cols="20" rows="5" placeholder="address" required></textarea>
             <button type="submit" class="button" onclick="placeOrder()">Place Order</a> </button>
             <a href="menu.html">back to menu</a>
         </form>
