--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <title>The upper curst pizza</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    
 </head>
 <body>
+    <a href="#" style="display: none;">
+        <!--email_off-->22f3002844@ds.study.iitm.ac.in<!--/email_off-->
+    </a>
     <nav class="nav">
     <div>
         <p class="navtitle">THE UPPER CRUST</p>
